--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ PyPDF2
 langchain
 langchain-core
 langchain-community
+langchain-text-splitters
 langchain-huggingface
+huggingface_hub
 sentence-transformers
 faiss-cpu
