--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-python-dotenv
-PyPDF2
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
-langchain-huggingface
-huggingface_hub
-sentence-transformers
-faiss-cpu
+streamlit==1.39.0
+python-dotenv==1.0.1
+PyPDF2==3.0.1
+langchain==0.1.16
+langchain-community==0.0.34
+langchain-huggingface==0.0.3
+huggingface_hub==0.23.2
+sentence-transformers==2.7.0
+faiss-cpu==1.8.0.post1
