--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+# --- runtime ---
 streamlit==1.39.0
 python-dotenv==1.0.1
 PyPDF2==3.0.1
-langchain==0.1.16
-langchain-community==0.0.34
-langchain-huggingface==0.0.3
-huggingface_hub==0.23.2
+
+# --- langchain v0.2 line ---
+langchain==0.2.16
+langchain-core==0.2.38
+langchain-community==0.2.16
+langchain-text-splitters==0.2.2
+
+# --- HF + embeddings ---
+langchain-huggingface==0.1.0
+huggingface_hub==0.24.6
 sentence-transformers==2.7.0
+
+# --- vector store ---
 faiss-cpu==1.8.0.post1
